--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 </head>
-  <!-- 17 Agustus 2024 -->
-  <meta http-equiv="Refresh" content="0; url=https://docs.google.com/spreadsheets/d/e/2PACX-1vTLKuBS3vwGQLvCEwdYePPi-ibeRtnIRjhLAb89778ULc4-RRV5fQKdO_2B13ITqp_4ER4d-Ed8T3l4/pubhtml?gid=1788153800&single=true" />
+  <!-- Culfest 2024 -->
+  <meta http-equiv="Refresh" content="0; https://docs.google.com/spreadsheets/d/e/2PACX-1vRpWAlhI7qweyqb8STqmnv4YTYIKYe8qPjHPepx99ozIz6dN4KtgRxh0Kt4C2aMbv483wd41YnfAc1r/pubhtml?gid=1744119955&single=true" />
 <body>
-  <p>Please follow <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTLKuBS3vwGQLvCEwdYePPi-ibeRtnIRjhLAb89778ULc4-RRV5fQKdO_2B13ITqp_4ER4d-Ed8T3l4/pubhtml?gid=1788153800&single=true">this link</a>.</p>
+  <p>Please follow <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRpWAlhI7qweyqb8STqmnv4YTYIKYe8qPjHPepx99ozIz6dN4KtgRxh0Kt4C2aMbv483wd41YnfAc1r/pubhtml?gid=1744119955&single=true">this link</a>.</p>
 </body>
 </html>
